--- a/part3/bloglist-frontend/src/index.css
+++ b/part3/bloglist-frontend/src/index.css
@@ -17,3 +17,14 @@
   padding: 10px;
   margin-bottom: 10px;
 }
+
+.navigation {
+  background-color: lightgrey;
+  margin-bottom: 10px;
+  padding: 10px;
+
+}
+
+.button-logout {
+  margin-left: 5px;
+}
